<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="wings.floathorizon.MainActivity"
    android:background="@drawable/activitymain_background"
    >

    <ImageButton
        android:id="@+id/activityMain_buttonMode"
        android:contentDescription="@string/activityMain_buttonMode"
        android:layout_width="@dimen/button"
        android:layout_height="@dimen/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/mainactivity_buttonmode"
        android:scaleType="fitCenter"
        android:background="#00000000"
        android:layout_margin="@dimen/activityMain_buttonMode_margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/activityMain_button"
        android:layout_marginBottom="32dp"
        >

        <TextView
            android:id="@+id/mainActivity_textX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:textColor="@color/activityMain_xy"
            />
        <TextView
            android:id="@+id/mainActivity_textY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:textColor="@color/activityMain_xy"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activityMain_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <ImageButton
            android:id="@+id/activityMain_buttonExit"
            android:contentDescription="@string/activityMain_buttonExit"
            android:layout_width="0dp"
            android:layout_height="@dimen/button"
            android:layout_weight="1"
            android:src="@drawable/activitymain_buttonclose"
            android:scaleType="fitCenter"
            android:background="#00000000"
            />
        <ImageButton
            android:id="@+id/activityMain_buttonHide"
            android:contentDescription="@string/activityMain_buttonHide"
            android:layout_width="0dp"
            android:layout_height="@dimen/button"
            android:layout_weight="1"
            android:src="@drawable/activitymain_buttonhide"
            android:scaleType="fitCenter"
            android:background="#00000000"
            />
        <ImageButton
            android:id="@+id/activityMain_buttonSet"
            android:contentDescription="@string/activityMain_buttonSet"
            android:layout_width="0dp"
            android:layout_height="@dimen/button"
            android:layout_weight="1"
            android:src="@drawable/activitymain_buttonset"
            android:scaleType="fitCenter"
            android:background="#00000000"
            />
        <ImageButton
            android:id="@+id/activityMain_buttonIntroduction"
            android:contentDescription="@string/activityMain_buttonIntroduction"
            android:layout_width="0dp"
            android:layout_height="@dimen/button"
            android:layout_weight="1"
            android:src="@drawable/activitymain_buttonintroduction"
            android:scaleType="fitCenter"
            android:background="#00000000"
            />
    </LinearLayout>

</RelativeLayout>
